# ax-arise

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
arise/: __init__.py  agent.py  cli.py  config.py  distributed.py  llm.py  llm_router.py  telemetry.py  types.py  worker.py
arise/adapters/: __init__.py  strands.py
arise/console/: __init__.py  registry.py  runner.py  schemas.py  server.py  ws.py
arise/console/routes/: agents.py
arise/prompts/: __init__.py  adversarial.py  patch.py  refinement.py  synthesis.py
arise/registry/: __init__.py  client.py  models.py
arise/rewards/: __init__.py  builtin.py  learned.py
arise/skills/: forge.py  library.py
arise/stores/: s3.py  sqs.py
arise/trajectory/: store.py
benchmarks/: RESULTS.md  plot_results.py  run_benchmark.py
benchmarks/acmecorp/: fixtures.py
benchmarks/baselines/: __init__.py  fixed_tools.py
benchmarks/datacorp/: __init__.py  csv_format.py  fixtures.py  query.py  validation_api.py
benchmarks/tasks/: __init__.py  datacorp_tasks.py  phase1_logs.py  phase2_metrics.py  phase3_config.py  phase4_incident.py
benchmarks/tests/: test_baselines.py  test_datacorp.py  test_fixtures.py  test_tasks.py
blog/: build-self-evolving-agent.md
demo/agentcore/: .bedrock_agentcore.yaml  README.md  agent.py  pyproject.toml  requirements.txt
demo/email-agent/: agent.py
demo/email-agentcore/: .bedrock_agentcore.yaml  Dockerfile  Dockerfile.worker  agent.py  requirements.txt  telegram_bot.py  worker.py
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/docs-site/src/styles/: custom.css
docs-site/public/: CNAME  llms.txt
docs-site/src/content/docs/: benchmarks.md  index.md
docs-site/src/content/docs/getting-started/: how-it-works.md  installation.md  quickstart.md
docs-site/src/content/docs/guide/: adapters.md  console.md  dashboard.md  distributed.md  registry.md  rewards.md  safety.md
docs-site/src/content/docs/reference/: api-arise.md  api-config.md  api-types.md  cli.md
docs/superpowers/plans/: 2026-03-16-core-improvements-and-agentcore-demo.md
examples/: README.md  api_agent.py  devops_agent.py  file_gen_agent.py  quickstart_evolution.py  strands_agent.py
paper/: arise-paper.md
tests/: test_distributed_e2e.py  test_distributed_llm.py  test_distributed_setup.py  test_evolution_reports.py  test_forge_imports.py  test_incremental_evolution.py  test_llm_router.py  test_registry.py  test_reward_learning.py  test_strands_adapter.py
tests/test_console/: test_registry.py  test_routes_agents.py
