[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arise-ai"
version = "0.1.3"
description = "Self-evolving agent framework — agents that create their own tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alibek Kaliyev" },
]
keywords = ["agents", "tools", "self-evolving", "llm", "autonomous", "skill-library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/abekek/arise"
Repository = "https://github.com/abekek/arise"
Issues = "https://github.com/abekek/arise/issues"

[project.optional-dependencies]
litellm = ["litellm>=1.0"]
docker = ["docker>=7.0"]
aws = ["boto3>=1.34"]
dashboard = ["rich>=13.0", "fastapi>=0.115.0", "uvicorn>=0.34.0", "httpx>=0.27.0"]
otel = ["opentelemetry-api>=1.0", "opentelemetry-sdk>=1.0"]
all = ["litellm>=1.0", "docker>=7.0", "boto3>=1.34", "rich>=13.0", "fastapi>=0.115.0", "uvicorn>=0.34.0", "httpx>=0.27.0", "opentelemetry-api>=1.0", "opentelemetry-sdk>=1.0"]
dev = ["pytest>=8.0", "rich>=13.0", "fastapi>=0.115.0", "uvicorn>=0.34.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["arise"]

[project.scripts]
arise = "arise.cli:main"
